# coronas-game-of-life

./: CMakeLists.txt  README.md
assets/: Corona.qrc  Corona.qrc.in
assets/images/: floor-0.piskel  floor-cement.piskel  floor-clinker.piskel  floor-grassland.piskel  floor-rainbow.piskel  player-0.piskel  player-3tagebart.piskel  player-blfem.piskel  player-blm.piskel  player-elvis.piskel  player-girl.piskel  player-girl2.piskel  player-merkel.piskel  player-salafist.piskel  player-skeleton.piskel  player-skeleton2.piskel  player-trump.piskel  player-winnie.piskel  player-xi.piskel  virus.piskel  virus_a.piskel  wall-0.piskel  wall-clinker.piskel  wall-clinker2.piskel  wall-grassland.piskel  wall-rainbow.piskel
assets/maps/: ActualMap.json  DebugMap.json
assets/styles/: Credits.qss  GameWidget.qss  GameWindow.qss  MainMenu.qss
src/: Credits.cpp  Credits.hpp  Credits.ui  GameWidget.cpp  GameWidget.hpp  GameWidget.ui  GameWindow.cpp  GameWindow.hpp  MainMenu.cpp  MainMenu.hpp  MainMenu.ui  Map.cpp  Map.hpp  MapModel.cpp  MapModel.hpp  Player.hpp  Tile.cpp  Tile.hpp  corona.cpp
